traspas implementado, intento de fix del update sin where, y modificacion del Insertar jugador (no implementado en menu)